# Elysium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Elysium/: Elysium.vcxproj  Elysium.vcxproj.filters  Source.cpp
Elysium/Platform/: WindowsWindow.cpp  WindowsWindow.h
Elysium/Platform/OpenGL/: imgui_impl_opengl3.cpp
Elysium/src/: Elysium.h  Window.cpp  Window.h  epch.cpp  epch.h
Elysium/src/Elysium/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Elysium/src/Elysium/Events/: Event.h  InputEvent.cpp  InputEvent.h
Elysium/src/Elysium/ImGui/: GUI.cpp  GUI.h
Elysium/src/Elysium/ImGui/Widgets/: Widget.h
Sandbox/: Sandbox.vcxproj  imgui.ini
Sandbox/src/: App.cpp
